[package]
name = "cyclebox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slotmap = { version = "1.0.6" }
atomic_enum = "0.2.0"
parking_lot = "0.12.1"
seqlock = "0.1.2"

[dev-dependencies]
criterion = "0.3.6"
rand = "0.8.5"
threadpool = "1.8.1"
indexmap = "1.9.1"

[dev-dependencies.pprof]
version = "0.10.0"
features = ["flamegraph", "criterion"]

[[bench]]
name = "bench"
path = "benchmark/bench.rs"
harness = false
