[package]
name = "cyclebox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slotmap = { version = "1.0.6" }
roaring = { version = "0.9.0" }

[dev-dependencies]
criterion = "0.3.6"
rand = "0.8.5"

[dev-dependencies.pprof]
version = "0.10.0"
features =["flamegraph", "criterion"]

[[bench]]
name = "bench"
path = "benchmark/bench.rs"
harness = false
